# bas_ca

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
bas_ca/: hooks.py  modules.txt
bas_ca/bas_ca/: api.py
bas_ca/bas_ca/fixtures/: compliance_task_template.json  role.json  workspace.json
bas_ca/bas_ca/www/: bas-ca-login.html  bas-ca-login.py
bas_ca/doctype/board_meeting/: board_meeting.js  board_meeting.json
bas_ca/doctype/client_engagement/: client_engagement.js
bas_ca/doctype/compliance_task/: compliance_task.js
bas_ca/doctype/roc_filing/: roc_filing.py
bas_ca/doctype/secretarial_audit/: secretarial_audit.js  secretarial_audit.json
bas_ca/doctype/secretarial_audit_checklist/: secretarial_audit_checklist.json
bas_ca/doctype/statutory_register/: statutory_register.py
bas_ca/doctype/time_log_ca/: time_log_ca.js
bas_ca/fixtures/: compliance_task_template.json  role.json  workflow.json  workflow_state.json  workspace.json
bas_ca/print_format/board_meeting_minutes/: board_meeting_minutes.html
bas_ca/print_format/board_meeting_notice/: board_meeting_notice.json
bas_ca/public/: build.json
bas_ca/public/css/: bas_ca_portal.css
bas_ca/report/compliance_ageing/: compliance_ageing.json
bas_ca/report/gst_tds_reconciliation_summary/: gst_tds_reconciliation_summary.json
bas_ca/report/penalty_avoidance/: penalty_avoidance.js  penalty_avoidance.json
bas_ca/templates/pages/: bas_ca_login.html  bas_ca_portal.html  (+1 more)
bas_ca/www/: bas-ca-login.html  bas-ca-portal.html  bas-ca-portal.py
(+44 files in other folders)
